[gd_scene load_steps=2 format=3 uid="uid://lighter_minigame_scene"]

[ext_resource type="Script" path="res://scripts/lighter_minigame.gd" id="1_lighter"]

[node name="LighterMinigame" type="CanvasLayer" groups=["lighter_minigame"]]
script = ExtResource("1_lighter")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="InstructionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Press SPACE or CLICK to light!"
horizontal_alignment = 1

[node name="BarContainer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="BarBG" type="ColorRect" parent="Panel/VBoxContainer/BarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="BurnLeft" type="ColorRect" parent="Panel/VBoxContainer/BarContainer"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.8, 0.1, 0.1, 1)

[node name="FailLeft" type="ColorRect" parent="Panel/VBoxContainer/BarContainer"]
layout_mode = 0
offset_left = 50.0
offset_right = 175.0
offset_bottom = 50.0
color = Color(0.4, 0.4, 0.1, 1)

[node name="OKZone" type="ColorRect" parent="Panel/VBoxContainer/BarContainer"]
layout_mode = 0
offset_left = 175.0
offset_right = 325.0
offset_bottom = 50.0
color = Color(0.1, 0.7, 0.2, 1)

[node name="FailRight" type="ColorRect" parent="Panel/VBoxContainer/BarContainer"]
layout_mode = 0
offset_left = 325.0
offset_right = 450.0
offset_bottom = 50.0
color = Color(0.4, 0.4, 0.1, 1)

[node name="BurnRight" type="ColorRect" parent="Panel/VBoxContainer/BarContainer"]
layout_mode = 0
offset_left = 450.0
offset_right = 500.0
offset_bottom = 50.0
color = Color(0.8, 0.1, 0.1, 1)

[node name="Marker" type="ColorRect" parent="Panel/VBoxContainer/BarContainer"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 50.0
color = Color(1, 1, 1, 1)

[node name="ResultLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
